// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Dismissible should render a dismissible icon button with the warning variant 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(0,0,0,0);
  border: 0;
  border-color: #FFFFFF;
  border-radius: 100%;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: "Open Sans",Helvetica,sans-serif;
  font-size: 16px;
  font-weight: 600;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 24px;
  margin: 4px;
  min-width: 96px;
  overflow: hidden;
  padding: 12px 16px;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,color 0.35s;
  transition: background 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: 40px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  min-width: 0;
  padding: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  border-radius: 0 4px 4px 0;
  color: inherit;
  height: auto;
  padding: 0 12px;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px dotted rgba(255,255,255,0.7);
  outline-offset: 3px;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: rgba(0,0,0,0.3);
  color: #FFFFFF;
}

.emotion-0:not(:disabled):after {
  background: #FFFFFF;
  border-radius: 50%;
  content: '';
  height: 28px;
  left: 50%;
  opacity: 0;
  padding: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%) scale(1);
  -ms-transform: translate(-50%,-50%) scale(1);
  transform: translate(-50%,-50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  -webkit-transition: opacity 1s,transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: 28px;
}

.emotion-0:not(:disabled):active {
  background: rgba(0,0,0,0.5);
  color: #FFFFFF;
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%,-50%) scale(0);
  -ms-transform: translate(-50%,-50%) scale(0);
  transform: translate(-50%,-50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  -webkit-transition: transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-0.emotion-0:focus:not(:disabled) {
  outline: 2px dotted #027EE1;
  outline-offset: 0 !important;
}

.emotion-0:hover:not(:disabled):before,
.emotion-0:focus:not(:disabled):before {
  background: #027EE1;
  opacity: 0.15;
}

.emotion-0:hover:after,
.emotion-0:focus:after {
  display: none;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(0,0,0,0);
  border: 0;
  border-color: #FFFFFF;
  border-radius: 100%;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: "Open Sans",Helvetica,sans-serif;
  font-size: 16px;
  font-weight: 600;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 24px;
  margin: 4px;
  min-width: 96px;
  overflow: hidden;
  padding: 12px 16px;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,color 0.35s;
  transition: background 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: 40px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  min-width: 0;
  padding: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  border-radius: 0 4px 4px 0;
  color: inherit;
  height: auto;
  padding: 0 12px;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px dotted rgba(255,255,255,0.7);
  outline-offset: 3px;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: rgba(0,0,0,0.3);
  color: #FFFFFF;
}

.emotion-0:not(:disabled):after {
  background: #FFFFFF;
  border-radius: 50%;
  content: '';
  height: 28px;
  left: 50%;
  opacity: 0;
  padding: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%) scale(1);
  -ms-transform: translate(-50%,-50%) scale(1);
  transform: translate(-50%,-50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  -webkit-transition: opacity 1s,transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: 28px;
}

.emotion-0:not(:disabled):active {
  background: rgba(0,0,0,0.5);
  color: #FFFFFF;
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%,-50%) scale(0);
  -ms-transform: translate(-50%,-50%) scale(0);
  transform: translate(-50%,-50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  -webkit-transition: transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-0.emotion-0:focus:not(:disabled) {
  outline: 2px dotted #027EE1;
  outline-offset: 0 !important;
}

.emotion-0:hover:not(:disabled):before,
.emotion-0:focus:not(:disabled):before {
  background: #027EE1;
  opacity: 0.15;
}

.emotion-0:hover:after,
.emotion-0:focus:after {
  display: none;
}

<button
  aria-label="Close this message"
  class="emotion-0 emotion-1"
  color="primary"
  id="ignoreButton"
  shape="round"
>
  <svg
    aria-labelledby="ignoreButton"
    class="icon"
    fill="currentColor"
    height="20"
    id="ignoreSvg"
    viewBox="0 0 24 24"
    width="20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
      fill-rule="evenodd"
      id="ignoreTitle"
    />
  </svg>
</button>
`;

exports[`Alert Variants should render an alert with danger variant 1`] = `
.emotion-3 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-animation: fadein 500ms;
  animation: fadein 500ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 24px;
  max-width: 100%;
  padding: 0;
  position: relative;
}

@media (max-width:600px) {
  .emotion-3 {
    font-size: 14px;
    line-height: 20px;
  }
}

.emotion-3:focus {
  outline: 2px dotted #027EE1;
}

.emotion-3 a {
  color: inherit;
  font-weight: 600;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-3 a:focus {
  outline: 2px dotted rgba(255,255,255,0.7);
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  padding: 0 8px 0 12px;
}

@media (max-width:600px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 12px 0;
}

@media (max-width:600px) {
  .emotion-1 {
    padding-left: 12px;
  }
}

.emotion-2 {
  background-color: #C61D23;
  border-radius: 4px;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  z-index: 2;
}

.emotion-3 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-animation: fadein 500ms;
  animation: fadein 500ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 24px;
  max-width: 100%;
  padding: 0;
  position: relative;
}

@media (max-width:600px) {
  .emotion-3 {
    font-size: 14px;
    line-height: 20px;
  }
}

.emotion-3:focus {
  outline: 2px dotted #027EE1;
}

.emotion-3 a {
  color: inherit;
  font-weight: 600;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-3 a:focus {
  outline: 2px dotted rgba(255,255,255,0.7);
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  padding: 0 8px 0 12px;
}

@media (max-width:600px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 12px 0;
}

@media (max-width:600px) {
  .emotion-1 {
    padding-left: 12px;
  }
}

.emotion-2 {
  background-color: #C61D23;
  border-radius: 4px;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  z-index: 2;
}

<div>
  <div
    class="emotion-3"
    id="auto-generated-id"
    tabindex="-1"
  >
    <div
      class="emotion-2"
    >
      <span
        class="emotion-0"
      >
        <svg
          class="icon"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM4 12c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L5.69 16.9C4.63 15.55 4 13.85 4 12zm8 8c-1.85 0-3.55-.63-4.9-1.69L18.31 7.1C19.37 8.45 20 10.15 20 12c0 4.42-3.58 8-8 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <div
        class="emotion-1"
      >
        Test Alert Text
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert Variants should render an alert with info variant 1`] = `
.emotion-3 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-animation: fadein 500ms;
  animation: fadein 500ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 24px;
  max-width: 100%;
  padding: 0;
  position: relative;
}

@media (max-width:600px) {
  .emotion-3 {
    font-size: 14px;
    line-height: 20px;
  }
}

.emotion-3:focus {
  outline: 2px dotted #027EE1;
}

.emotion-3 a {
  color: inherit;
  font-weight: 600;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-3 a:focus {
  outline: 2px dotted rgba(255,255,255,0.7);
}

.emotion-2 {
  background-color: #3F3F3F;
  border-radius: 4px;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  z-index: 2;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  padding: 0 8px 0 12px;
}

@media (max-width:600px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 12px 0;
}

@media (max-width:600px) {
  .emotion-1 {
    padding-left: 12px;
  }
}

.emotion-3 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-animation: fadein 500ms;
  animation: fadein 500ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 24px;
  max-width: 100%;
  padding: 0;
  position: relative;
}

@media (max-width:600px) {
  .emotion-3 {
    font-size: 14px;
    line-height: 20px;
  }
}

.emotion-3:focus {
  outline: 2px dotted #027EE1;
}

.emotion-3 a {
  color: inherit;
  font-weight: 600;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-3 a:focus {
  outline: 2px dotted rgba(255,255,255,0.7);
}

.emotion-2 {
  background-color: #3F3F3F;
  border-radius: 4px;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  z-index: 2;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  padding: 0 8px 0 12px;
}

@media (max-width:600px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 12px 0;
}

@media (max-width:600px) {
  .emotion-1 {
    padding-left: 12px;
  }
}

<div>
  <div
    class="emotion-3"
    id="auto-generated-id"
    tabindex="-1"
  >
    <div
      class="emotion-2"
    >
      <span
        class="emotion-0"
      >
        <svg
          class="icon"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 15c-.55 0-1-.45-1-1v-4c0-.55.45-1 1-1s1 .45 1 1v4c0 .55-.45 1-1 1zm1-8h-2V7h2v2z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <div
        class="emotion-1"
      >
        Test Alert Text
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert Variants should render an alert with warning variant 1`] = `
.emotion-3 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-animation: fadein 500ms;
  animation: fadein 500ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 24px;
  max-width: 100%;
  padding: 0;
  position: relative;
}

@media (max-width:600px) {
  .emotion-3 {
    font-size: 14px;
    line-height: 20px;
  }
}

.emotion-3:focus {
  outline: 2px dotted #027EE1;
}

.emotion-3 a {
  color: inherit;
  font-weight: 600;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-3 a:focus {
  outline: 2px dotted rgba(255,255,255,0.7);
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  padding: 0 8px 0 12px;
}

@media (max-width:600px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 12px 0;
}

@media (max-width:600px) {
  .emotion-1 {
    padding-left: 12px;
  }
}

.emotion-2 {
  background-color: #FFC72C;
  border-radius: 4px;
  color: #3F3F3F;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  z-index: 2;
}

.emotion-3 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-animation: fadein 500ms;
  animation: fadein 500ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 24px;
  max-width: 100%;
  padding: 0;
  position: relative;
}

@media (max-width:600px) {
  .emotion-3 {
    font-size: 14px;
    line-height: 20px;
  }
}

.emotion-3:focus {
  outline: 2px dotted #027EE1;
}

.emotion-3 a {
  color: inherit;
  font-weight: 600;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-3 a:focus {
  outline: 2px dotted rgba(255,255,255,0.7);
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  padding: 0 8px 0 12px;
}

@media (max-width:600px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 12px 0;
}

@media (max-width:600px) {
  .emotion-1 {
    padding-left: 12px;
  }
}

.emotion-2 {
  background-color: #FFC72C;
  border-radius: 4px;
  color: #3F3F3F;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  z-index: 2;
}

<div>
  <div
    class="emotion-3"
    id="auto-generated-id"
    tabindex="-1"
  >
    <div
      class="emotion-2"
    >
      <span
        class="emotion-0"
      >
        <svg
          class="icon"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 7c.55 0 1 .45 1 1v4c0 .55-.45 1-1 1s-1-.45-1-1V8c0-.55.45-1 1-1zm-.01-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm1-3h-2v-2h2v2z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <div
        class="emotion-1"
      >
        Test Alert Text
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert should render an alert with default variant 1`] = `
.emotion-3 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-animation: fadein 500ms;
  animation: fadein 500ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 24px;
  max-width: 100%;
  padding: 0;
  position: relative;
}

@media (max-width:600px) {
  .emotion-3 {
    font-size: 14px;
    line-height: 20px;
  }
}

.emotion-3:focus {
  outline: 2px dotted #027EE1;
}

.emotion-3 a {
  color: inherit;
  font-weight: 600;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-3 a:focus {
  outline: 2px dotted rgba(255,255,255,0.7);
}

.emotion-2 {
  background-color: #3F3F3F;
  border-radius: 4px;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  z-index: 2;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  padding: 0 8px 0 12px;
}

@media (max-width:600px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 12px 0;
}

@media (max-width:600px) {
  .emotion-1 {
    padding-left: 12px;
  }
}

.emotion-3 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-animation: fadein 500ms;
  animation: fadein 500ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 24px;
  max-width: 100%;
  padding: 0;
  position: relative;
}

@media (max-width:600px) {
  .emotion-3 {
    font-size: 14px;
    line-height: 20px;
  }
}

.emotion-3:focus {
  outline: 2px dotted #027EE1;
}

.emotion-3 a {
  color: inherit;
  font-weight: 600;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-3 a:focus {
  outline: 2px dotted rgba(255,255,255,0.7);
}

.emotion-2 {
  background-color: #3F3F3F;
  border-radius: 4px;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  z-index: 2;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  padding: 0 8px 0 12px;
}

@media (max-width:600px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 12px 0;
}

@media (max-width:600px) {
  .emotion-1 {
    padding-left: 12px;
  }
}

<div>
  <div
    class="emotion-3"
    id="defaultVariant"
    tabindex="-1"
  >
    <div
      class="emotion-2"
    >
      <span
        class="emotion-0"
      >
        <svg
          class="icon"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 15c-.55 0-1-.45-1-1v-4c0-.55.45-1 1-1s1 .45 1 1v4c0 .55-.45 1-1 1zm1-8h-2V7h2v2z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <div
        class="emotion-1"
      >
        Test Alert Text
      </div>
    </div>
  </div>
</div>
`;
